Bug 759744 - Remove the overflow-x: hidden; rule from all notification bars. r=mconley a=mbanner DONTBUILD

--- a/mail/components/im/themes/chat.css
+++ b/mail/components/im/themes/chat.css
@@ -305,11 +305,6 @@ imconv[attention] {
 }
 %endif
 
-.textbox-textarea,
-notificationbox {
-  overflow-x: hidden;
-}
-
 %ifdef XP_MACOSX
 grippy {
   display: none;
